--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: date_cupertino_bottom_sheet_picker
 description: "This is a date package in the form of Cupertino and you can set the age limit of your users."
 version: 0.0.1
-homepage: ""
+homepage: "https://github.com/SwanFlutter/date_cupertino_bottom_sheet_picker.git"
 
 environment:
   sdk: '>=2.19.0 <4.0.0'
