--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: date_cupertino_bottom_sheet_picker
 description: "This is a date package in the form of Cupertino and you can set the age limit of your users."
-version: 0.0.3
+version: 0.0.3+1
 homepage: "https://github.com/SwanFlutter/date_cupertino_bottom_sheet_picker.git"
 
 environment:
@@ -10,12 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
 
