--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: date_cupertino_bottom_sheet_picker
 description: "This is a date package in the form of Cupertino and you can set the age limit of your users."
-version: 0.0.4
+version: 0.0.5
 homepage: "https://github.com/SwanFlutter/date_cupertino_bottom_sheet_picker.git"
 
 environment:
@@ -10,12 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.0
+  shamsi_date: ^1.0.4
+  fade_animation_delayed: ^0.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 flutter:
 
